--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,27 @@
 asgiref==3.8.1
+certifi==2024.6.2
+charset-normalizer==3.3.2
+coreapi==2.3.3
+coreschema==0.0.4
 Django==4.2.13
 django-cors-headers==4.3.1
+django-extensions==3.2.3
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
+idna==3.7
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+packaging==24.1
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.32.3
 sqlparse==0.5.0
 typing_extensions==4.11.0
+uritemplate==4.1.1
+urllib3==2.2.1
